Updated news/notice layout.

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -43,7 +43,7 @@ news: true
             <h3 class="panel-title text-center">Notices</h3>
           </div>
           <div class="list-group">
-            <div id="assrNotice" class="list-group-item"></div>
+            <div id="assrNotice"></div>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@ news: true
             <h3 class="panel-title text-center">News</h3>
           </div>
           <div class="list-group">
-            <div id="assrNews" class="list-group-item"></div>
+            <div id="assrNews"></div>
           </div>
         </div>
       </div>
