Updated files/forms layout.

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -82,7 +82,7 @@ util: true
 				<h3 class="panel-title text-center"> Applications &amp; Handouts</h4>
 			</div>
 			<div class="list-group">
-				<div id="pbDir" class="list-group-item"></div>
+				<div id="pbDir"></div>
 			</div>
 			<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
 				<div class="list-group pre-scrollable">
