changed jaildivision to detention, patrol division to operations. Removed chaplains and community contracts.

--- a/_pages/dept/sheriff/detention.html
+++ b/_pages/dept/sheriff/detention.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Sheriff Jail Division
-permalink: /sheriff/jaildivision/
+title: Detention
+permalink: /sheriff/detention/
 ---
 
 <div class="row">
