Changes to Sheriff operations  description.

--- a/_pages/dept/sheriff/operations.html
+++ b/_pages/dept/sheriff/operations.html
@@ -15,23 +15,30 @@ permalink: /sheriff/operations
 
     <div id="collapse1" class="collapse in">
       <div class="panel-body">
-        The Field Division is most commonly involved with citizen interaction both in the office and in the field. Much of this Division's work is done away from the Sheriff's Office.
-        The statutory duties of the Sheriff's Office is clear and includes: Preserving the peace, arresting and taking before magistrates all those who commit or attempt to commit
-        public offenses, prevent affrays, breaches of the peace, insurrections and riots, to serve and document service and record service of all required legal process, to issue
-        Concealed Weapons Permits, to issue Driver's Licenses, to work with the Idaho Department of Law Enforcement in the safe use of public highways, to safeguard and protect
-        highway surfaces, to enforce livestock inspection, transportation and theft violations, to regulate traffic on all highways and roads including response to and investigation
-        of wrecks, and to investigate all cases involving missing children.
-        <br><br>
-        This Division is responsible for patrolling over 200 miles of State Highway and over 1,000 miles of county roads. The total size of our county is 1,100 square miles.
-        <br><br>
-        The Field Division is responsible for the enforcement of all penal provisions and laws of the state of Idaho.
-        This division operates a fleet of 18 marked patrol vehicles, six administrative and detectives' vehicles, and one special administrative vehicle shared by
-        the entire department for special needs.
-        <br><br>
-        This year we asked for and received funding from the County Commissioners to purchase and equip five new patrol vehicles.
-        This allowed us to reach a goal that we have been striving for, and that is to have take-home vehicles for all Patrol Deputies.
-        This achieves several goals, with each deputy having a take home vehicle it will increase the life of the vehicles from two to three years, to four to five years.
-         When we have an emergency call out the response time will be substantially reduced.
+        Operations consists of two divisions, Patrol and Investigations and is supervised by a Lieutenant.        
+        <h4><strong>Patrol Division:</strong></h4>
+        <p>The Latah County Sheriff Patrol Division is dedicated to increasing public safety by creating safe neighborhoods and public places. Deputies in the Patrol Division are responsible for responding to calls for service from the public, investigating crimes, investigating vehicle crashes, and enforcement of traffic laws. The Patrol Division consist of three Sergeants, three Corporals, and thirteen Deputies.</p>
+        <p>The Patrol Division provides police services to all unincorporated areas of Latah County. We are also contracted to provide law Enforcement services to the incorporated cities of Potlatch, Bovill, Deary, Troy, Kendrick, Julieatta, and Genesee.</p>
+        <p>Uniformed Patrol Deputies actively patrol approximately 1100 square miles, and nearly 1200 miles of county roads and state highways, 24 hours a day, seven days a week.</p>
+        <p>The Latah County Sheriff Tactical Response Team is also part of the Patrol Division. The team handles hazardous situations that are beyond the normal duties of patrol deputies, investigators, or outside agencies who request assistance. These situations require the need for special tactics, equipment, and/or weapons for a safe resolution.</p>
+        <p>The Tactical Response Team was established to provide specialized support in handing critical field operations where intense negotiations and special tactical methods are required.</p>
+        <p>
+          Some situations that may call for the Tactical Response Team are:
+          <ul>
+            <li>High-Risk Warrant Service (I.E. Drugs, Guns, Etc.)</li>
+            <li>Service of Warrants on Heavily Fortified Locations</li>
+            <li>Barricaded Suspects</li>
+            <li>Snipers/Hostage Situations</li>
+            <li>Civil Disturbances</li>
+            <li>Searches for Armed Suspects</li>
+            <li>High Risk Prisoner Transports</li>
+            <li>High Risk Suicidal Persons</li>
+          </ul>
+        </p>
+        <p> The goal of the Tactical Response Team is the safe resolution of a high-risk incident with no injury to hostages, uninvolved citizens, law enforcement officers or suspects.</p>        
+        <h4><strong>Investigations Division:</strong></h4>        
+        <p>Latah County Sheriff’s Office Detectives are specially trained to initiate and conduct investigations. The Division uses specialized investigation equipment and evidence collection techniques. Detectives can respond using a mobile crime scene trailer to enhance their ability to conduct the best investigation possible.</p>
+        <p>The Investigations Division consists of one Detective Sergeant, one Detective Corporal, one narcotics Detective, and one general Detective. Crimes typically investigated by Detectives include: homicide, assaults, domestic violence, sex crimes, crimes against children, theft, fraud, burglary, and illegal drugs.</p>
       </div>
     </div>
   </div>
