--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -28,7 +28,7 @@ tree: true
     </div><!-- <div class="panel panel-default"> -->
 
       <!-- Agendas Proceedings and Proclamations -->
-        <div class="panel panel-primary">
+        <div class="panel panel-primary" id="agendas">
           <div class="panel-heading" >
             <h4 class="panel-title text-center">Agendas, Proceedings and Proclamations</h4>
           </div>
@@ -56,44 +56,16 @@ tree: true
 				<h4 class="panel-title text-center">Additional Information</h4>
 			</div>
   		<div class="list-group text-center">
-      	<a href="#" class="list-group-item list-link" onclick="downloadFileEx('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
-      	<a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
-      	<a href="/assessor/" class="list-group-item list-link">Tax Exempt Property Information</a>
+				<a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
+				<a href="#agendas" class="list-group-item list-link">Agendas</a>
+				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
       	<a href="/commissions/#laws" class="list-group-item list-link">Idaho Open Meeting Laws</a>
+				<a href="/assessor/" class="list-group-item list-link">Tax Exempt Property Information</a>				      	
 			</div>
   	</div>
   </div>
 	<!-- End Links -->
-  <!-- Agenda Notify Modal -->
-	<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">Signup for Meeting Notices</h4>
-				</div>
-				<div class="modal-body">
-					<form name="subscribe" method="post" action="http://www.latah.id.us/mailman/subscribe/agendanotify">
-						<p>
-							If you subscribe to this service you will receive an e-mail every time a BOCC agenda or proceeding is added or amended to this web site.
-						</p>
-						<p>
-							Please enter your e-mail address in the box below, select subscribe or unsubscribe and then select the Send Request button.
-						</p>
-						<p>
-							subscribe:<input type="radio" name="action" value="join" checked="">
-							unsubscribe: <input name="action" type="radio" value="leave">
-						</p>
-						E-mail Address: <input name="sAddr" type="email" size="35">
-						<input type="submit" value="Send Request">
-					</form>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div> -->
+  
 	<!-- Proclamations Modal -->
 	<div class="modal fade" id="proclamationsModal" tabindex="-1" role="dialog" aria-labelledby="proclamationsLabel">
 		<div class="modal-dialog" role="document">
