--- a/_pages/dept/assessor/assessorPlatMapsDT.html
+++ b/_pages/dept/assessor/assessorPlatMapsDT.html
@@ -53,7 +53,7 @@ $(document).ready(function() {
         "columnDefs" : [{             
             "targets" : 6,
             "render" : function(data, type, row, meta){
-                return '<a href=https://www.latah.id.us/api/downloadPlatMap?fileName=' + row.PDF + '>' + row.PDF + '</' + '>';
+                return '<a href=https://www.latah.id.us/api/downloadPlatMap?fileName=' + row.PDF + ' target="_blank"' + '>' + row.PDF + '</' + '>'; 
             }
         }],
         "columns" : [
