Added link to assessor plat maps page.

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -175,7 +175,7 @@ news: true
         <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group">
-        <!-- <a href="assessorPlatMaps/" class="list-group-item list-link text-center">Assessor Plat Maps</a>      disabled for now   -->
+        <a href="assessorPlatMapsDT/" class="list-group-item list-link text-center">Assessor Plat Maps</a>
         <a href="assessorfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>
         <a href="https://tax.idaho.gov/i-1051.cfm#sub1" class="list-group-item list-link text-center" target="_blank">Homeowners & Property Tax</a>
         <a href="https://gis.latah.id.us/parcelviewer/index.html" class="list-group-item list-link text-center" target="_blank">Latah County Parcel Viewer</a>
