Changed REST endpoint calls to use gis.latah.id.us

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -104,7 +104,7 @@ deptTree("comAgendas", "Commissioners")
 
 <script text/javascript>
 function downloadFileEx(filename){
-				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
+				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
 				window.open(url);
 			}
 </script>
