--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -195,7 +195,7 @@ calendar: true
 
   <script text/javascript>
   function downloadFileEx(filename){
-  				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
+  				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
   				window.open(url);
   			}
   </script>
