--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -142,7 +142,7 @@ getNewsandNotices(args, "SO")
 
 <script text/javascript>
 function downloadFileEx(p){
-				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + p;
+				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + p;
 				window.open(url);
 			}
 </script>
