--- a/_pages/dept/assessor/assessorPlatMaps.html
+++ b/_pages/dept/assessor/assessorPlatMaps.html
@@ -71,7 +71,7 @@ $( "#platSearch" ).submit(function( event ) {
     $('#platSearchModal .modal-title').html('Search Results for: ' + search);
 
     $.ajax({
-        url: "https://www.latah.id.us/api/getPlatMaps?type=" + type + "&search=" + search,
+        url: "https://gis.latah.id.us/api/getPlatMaps?type=" + type + "&search=" + search,
         type: "GET",
         async: true,
         dataType: 'json',
@@ -97,7 +97,7 @@ $( "#platSearch" ).submit(function( event ) {
                 })
 
                 function downloadPlatMap(filename) {
-                    var url = 'https://www.latah.id.us/api/downloadPlatMap?fileName=' + filename
+                    var url = 'https://gis.latah.id.us/api/downloadPlatMap?fileName=' + filename
 
                     $.ajax({
                         url: '',
