--- a/_pages/dept/assessor/assessorPlatMapsDT.html
+++ b/_pages/dept/assessor/assessorPlatMapsDT.html
@@ -43,7 +43,7 @@ datatable: true
 $(document).ready(function() {    
     $('#platMaps').DataTable({
         "ajax" : {
-            "url" : "https://www.latah.id.us/api/getPlatMapsDT",
+            "url" : "https://gis.latah.id.us/api/getPlatMapsDT",
             "type" : "GET",
             "cache" : false,
             "dataSrc" : function(json){                
@@ -53,7 +53,7 @@ $(document).ready(function() {
         "columnDefs" : [{             
             "targets" : 6,
             "render" : function(data, type, row, meta){
-                return '<a href=https://www.latah.id.us/api/downloadPlatMap?fileName=' + row.PDF + ' target="_blank"' + '>' + row.PDF + '</' + '>'; 
+                return '<a href=https://gis.latah.id.us/api/downloadPlatMap?fileName=' + row.PDF + ' target="_blank"' + '>' + row.PDF + '</' + '>'; 
             }
         }],
         "columns" : [
