--- a/_pages/dept/sheriff/detention.html
+++ b/_pages/dept/sheriff/detention.html
@@ -67,7 +67,7 @@ permalink: /sheriff/detention/
 
 <script text/javascript>
 function downloadFileEx(filename){
-				var url = 'https://www.latah.id.us/api/DownloadFileEx?filename=' + filename;
+				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
 				window.open(url);
 			}
 </script>
