--- a/_pages/employment/home.html
+++ b/_pages/employment/home.html
@@ -81,7 +81,7 @@ permalink: /employment/
 
 <script text/javascript>
 function downloadJobApp(filename){
-  var url = 'https://www.latah.id.us/api/downloadJobApp?fileName=' + filename
+  var url = 'https://gis.latah.id.us/api/downloadJobApp?fileName=' + filename
   $.ajax({
     url: '',
     success: function(){
