added center-block to cloudinary image declaration for GIS map images.

--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -13,7 +13,7 @@ tree: true
                     <figcaption class="text-center" style="font-size: 1.5em">Parcel Viewier</figcaption>
                     <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg"
                         alt="Parcel Viewer"> -->
-                    {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded" width="200" alt="Parcel Viewer" %}                    
+                    {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Parcel Viewer" %}                    
                 </figure>
             </a>
             <a href="http://gis.latah.id.us/publicmap/index.html">
@@ -21,7 +21,7 @@ tree: true
                     <figcaption class="text-center" style="font-size: 1.5em">Public Map</figcaption>
                     <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg"
                         alt="Public Map"> -->
-                    {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded" width="200" alt="Public Map" %}                    
+                    {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Public Map" %}                    
                 </figure>
             </a>
         </div>
@@ -31,14 +31,14 @@ tree: true
                     <figcaption class="text-center" style="font-size: 1.5em">Subscription Map</figcaption>
                     <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg"
                         alt="Subscription Map"> -->
-                    {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded" width="200" alt="Subscription Map" %}                    
+                    {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Subscription Map" %}                    
                 </figure>
                 <a href="https://www.latah.id.us/latahview">
                     <figure class="col-md-6">
                         <figcaption class="text-center" style="font-size: 1.5em">Historic Places</figcaption>
                         <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg"
                             alt="Historic Places"> -->
-                        {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded" width="200" alt="Historic Places" %}                    
+                        {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Historic Places" %}                    
                     </figure>
                 </a>
         </div>
