minor changes to title, added text about subscription activation time.

--- a/_pages/dept/planning_building/GIS/OnlineSubscription.html
+++ b/_pages/dept/planning_building/GIS/OnlineSubscription.html
@@ -6,7 +6,7 @@ permalink: /planning_building/GIS/OnlineSubscription.html
     <div class="panel-body">
             <p style="text-align: center;"><span style="text-decoration: underline;"><strong>GIS Mapping Service Subscription Agreement</strong></span></p>
             <p><span style="text-decoration: underline;"><strong>SUBCRIPTION</strong></span></p>
-            <p>The County grants to the Subscriber a non-exclusive, non-transferable subscription to use the online GIS mapping service subject to the terms and conditions of this agreement.</p>
+            <p>The County grants to the Subscriber a non-exclusive, non-transferable subscription to use the online GIS mapping service subject to the terms and conditions of this agreement. Please allow 24-48 hours for subscription activation, notification will arrive by email.&nbsp;</p>
             <p><span style="text-decoration: underline;"><strong>SUBCRIPTION FEE</strong></span></p>
             <p>Upon receipt of subscription fee, as provided in the Subscription Fee Schedule, designated as Attachment C to the Latah County GIS Ordinance, and hereby incorporated by reference, and a completed subscription application, the County will assign the Subscriber a username and password that will remain valid for the term of the agreement and so long as the subscription does not lapse. Should the Subscription Agreement lapse, a new application for subscription must be submitted to the County.</p>
             <p><span style="text-decoration: underline;"><strong>TERM</strong></span></p>
