--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Planning and Building
+title: Planning, Building and GIS
 permalink: /planning_building/
 calendar: true
 tree: true
