Added printable maps dir control for gis.

--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -66,6 +66,12 @@ tree: true
             </div>
     
         </div>
+
+        <div class="panel panel-primary">                
+            <div class="list-group">
+                <div id="gisPrintDir"></div>
+            </div>        
+        </div>
     </div>
 
    <!-- modal object -->
@@ -104,6 +110,9 @@ tree: true
 
 <script type="text/javascript">
 	deptTree("gisDir", "GIS Documents")
+</script>
+<script type="text/javascript">
+	deptTree("gisPrintDir", "Printable Maps")
 </script>
 
 <script text/javascript>
