Added contact block back.

--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -65,9 +65,7 @@ permalink: /prosecutor/
   <!-- End Left Pane -->
   <!-- Right Pane -->
   <div class="col-md-4">
-      <div class="list-group ">
-          <div class="list-group-item text-center">Phone: (208) 883-2246</div>
-      </div>      
+    {% include contactBlock.html %}
     <!-- Services -->
     <div class="panel panel-primary">
       <div class="panel-heading">
