moved prior elections into a treeview control.

--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -83,7 +83,7 @@ tree: true
                 </div>
               </div>
             </div>
-          </div>
+          </div>          
         </div>
         <div class="panel-footer text-center">
           <p>
@@ -91,6 +91,22 @@ tree: true
           </p>
         </div>
       </div>
+
+
+      <div class="panel panel-default">
+          <div class="panel-heading text-center" role="tab" id="erHeadingThree">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#electionResources" href="#er3" aria-expanded="false" aria-controls="er3">
+                 Prior Elections and Results
+              </a>
+            </h4>
+          </div>
+          <div id="er3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingThree">
+              <div id="pastElections" class="list-group-item"></div>
+          </div>
+        </div>
+
+
     </div>
   </div>
   <div class="col-md-4">
@@ -117,13 +133,13 @@ tree: true
         </div>
         <div id="er1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingOne">
           <div class="list-group">
-            <a href="https://apps.idahovotes.gov/OnlineVoterRegistration/" target="_blank" class="list-group-item">Online Voter Registration</a>
-            <a href="https://idahovotes.gov/media/voter_registration.pdf" target="_blank" class="list-group-item">Printable Voter Registration Form</a>
-            <a href="https://idahovotes.gov/media/absentee.pdf" target="_blank" class="list-group-item">Absentee Ballot Request Form</a>
-            <a href="https://apps.idahovotes.gov/YourPollingPlace/AbsenteeBallotEnquiry.aspx" target="_blank" class="list-group-item">Absentee Ballot Status</a>
-            <a href="https://idahovotes.gov/media/party_affiliation.pdf" target="_blank" class="list-group-item">Political Party Affiliation Form</a>
-            <a href="https://www.fvap.gov/idaho" target="_blank" class="list-group-item">Military/Overseas Registration and Absentee Request</a>
-            <a href="https://vote.gov/" target="_blank" class="list-group-item">Out of State Voter Registration and Absentee Request Information</a>
+            <a href="https://apps.idahovotes.gov/OnlineVoterRegistration/" target="_blank" class="list-group-item list-link ">Online Voter Registration</a>
+            <a href="https://idahovotes.gov/media/voter_registration.pdf" target="_blank" class="list-group-item list-link">Printable Voter Registration Form</a>
+            <a href="https://idahovotes.gov/media/absentee.pdf" target="_blank" class="list-group-item list-link">Absentee Ballot Request Form</a>
+            <a href="https://apps.idahovotes.gov/YourPollingPlace/AbsenteeBallotEnquiry.aspx" target="_blank" class="list-group-item list-link">Absentee Ballot Status</a>
+            <a href="https://idahovotes.gov/media/party_affiliation.pdf" target="_blank" class="list-group-item list-link">Political Party Affiliation Form</a>
+            <a href="https://www.fvap.gov/idaho" target="_blank" class="list-group-item list-link">Military/Overseas Registration and Absentee Request</a>
+            <a href="https://vote.gov/" target="_blank" class="list-group-item list-link">Out of State Voter Registration and Absentee Request Information</a>
           </div>
         </div>
       </div>
@@ -134,22 +150,25 @@ tree: true
           </h4>
         </div>
       </div>
+
+      <!-- -->
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="erHeadingThree">
+        <div class="panel-heading" role="tab" id="erHeadingSix">
           <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#electionResources" href="#er3" aria-expanded="false" aria-controls="er3">
-               Prior Elections and Results
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#electionResources" href="#er6" aria-expanded="false" aria-controls="er6">
+               Prior State Elections and Results
             </a>
           </h4>
         </div>
-        <div id="er3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingThree">
-          <div class="list-group">
-            <a href="#" onclick="alert('For past elections information, please contact the Auditors office.')" class="list-group-item">Past Elections</a>
-            <a href="#" class="list-group-item" onclick="alert('No results have been posted at this time.')">Election Results &amp; Information</a>
-            <a href="https://sos.idaho.gov/elect/results/index.html" target="_blank" class="list-group-item">State of Idaho Election Results</a>
+        <div id="er6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingSix">
+          <div class="list-group">             
+            <a href="https://sos.idaho.gov/elect/results/index.html" target="_blank" class="list-group-item list-link">State of Idaho Election Results</a>
           </div>
         </div>
       </div>
+      <!-- -->
+
+
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="erHeadingFour">
           <h4 class="panel-title">
@@ -160,10 +179,10 @@ tree: true
         </div>
         <div id="er4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingFour">
           <div class="list-group">
-            <a href="https://www.latah.id.us/elections/Voter%20Precincts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item">City of Moscow Precinct Map</a>
-            <a href="https://www.latah.id.us/elections/Commissioner%20Districts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item">City of Moscow Commissioner District Map</a>
-            <a href="https://www.latah.id.us/elections/Voter_Precincts_2014_11x17.pdf" target="_blank" class="list-group-item">Latah County Precinct Map</a>
-            <a href="https://www.latah.id.us/elections/CommissionerDistricts.pdf" target="_blank" class="list-group-item">Latah County Commissioner District Map</a>
+            <a href="https://www.latah.id.us/elections/Voter%20Precincts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item list-link">City of Moscow Precinct Map</a>
+            <a href="https://www.latah.id.us/elections/Commissioner%20Districts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item list-link">City of Moscow Commissioner District Map</a>
+            <a href="https://www.latah.id.us/elections/Voter_Precincts_2014_11x17.pdf" target="_blank" class="list-group-item list-link">Latah County Precinct Map</a>
+            <a href="https://www.latah.id.us/elections/CommissionerDistricts.pdf" target="_blank" class="list-group-item list-link">Latah County Commissioner District Map</a>
           </div>
         </div>
       </div>
@@ -177,10 +196,10 @@ tree: true
         </div>
         <div id="er5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingFive">
           <div class="list-group">
-            <a href="https://www.latah.id.us/elections/2018/electionsCalendar.pdf" target="_blank" class="list-group-item">2018 Election Calendar for Latah County</a> <!-- Todo - a add pdf to the site -->
-            <a href="https://sos.idaho.gov/elect/2018Calendar.html" target="_blank" class="list-group-item">2018 State Consolidation Calendar</a>
-            <a href="#" class="list-group-item">City Clerks</a> <!-- Todo -add in modal -->
-            <a href="#" class="list-group-item">Political Parties in Idaho</a><!-- Todo -add in modal -->
+            <a href="https://www.latah.id.us/elections/2018/electionsCalendar.pdf" target="_blank" class="list-group-item list-link">2018 Election Calendar for Latah County</a> <!-- Todo - a add pdf to the site -->
+            <a href="https://sos.idaho.gov/elect/2018Calendar.html" target="_blank" class="list-group-item list-link">2018 State Consolidation Calendar</a>
+            <a href="#" class="list-group-item list-link">City Clerks</a> <!-- Todo -add in modal -->
+            <a href="#" class="list-group-item list-link">Political Parties in Idaho</a><!-- Todo -add in modal -->
           </div>
         </div>
       </div>
@@ -193,6 +212,9 @@ tree: true
 
 <script type="text/javascript">
   deptTree("ElectionsDir1", "Elections")
+</script>
+<script type="text/javascript">
+  deptTree("pastElections", "ElectionsArchive")
 </script>
 <script>
   $(() => {
