Changed parcel viewer url to use the javascript version.

--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -9,7 +9,7 @@ tree: true
   <div class="col-md-8 ">
     <div class="well">
       <div class="row">
-        <a href="http://gis.latah.id.us/ParcelViewer/index.html">
+        <a href="http://gis.latah.id.us/ParcelViewer/ParcelViewer.html">
           <figure class="col-md-6">
             <figcaption class="text-center" style="font-size: 1.5em">Parcel Viewer</figcaption>
             <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Parcel Viewer"> -->
