Added survey map

--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -38,6 +38,12 @@ tree: true
               {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Historic Places" %}
             </figure>
           </a>
+          <a href="http://gis.latah.id.us/ParcelViewer/Surveys.html">
+            <figure class="col-md-6">
+              <figcaption class="text-center" style="font-size: 1.5em">Subdivisions &amp; Surveys (work in progress)</figcaption>              
+              {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Subdivisions &amp; Surveys" %}
+            </figure>
+          </a>
       </div>
     </div>
   </div>
