javascript definition compatibility

--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -222,7 +222,7 @@ tree: true
   });
 </script>
 
-<script text/javascript>
+<script type="text/javascript">
   calendarList('Elections', 0, 30);
   calendarMonth();
 </script>
