--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -102,7 +102,7 @@ tree: true
 deptTree("comAgendas", "Commissioners")
 </script>
 
-<script text/javascript>
+<script type="text/javascript">
 function downloadFileEx(filename){
 				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
 				window.open(url);
