--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -193,13 +193,13 @@ calendar: true
   deptTree("caoDir", "CourtAssistance")
 </script>
 
-  <script text/javascript>
+  <script type="text/javascript">
   function downloadFileEx(filename){
   				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
   				window.open(url);
   			}
   </script>
-<script text/javascript>
+<script type="text/javascript">
   calendarMonth('CAO-Hours', 30, 90);
   calendarList('CAO-Hours', 0, 5);
 </script>
