--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -125,7 +125,7 @@ tree: true
     deptTree("gisPrintDir", "Printable Maps")
   </script>
 
-  <script text/javascript>
+  <script type="text/javascript">
     function downloadFileEx(p) {
       var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + p;
       window.open(url);
