--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -87,7 +87,7 @@ tree: true
 <script type="text/javascript">
 	deptTree("pbDir", "PlanningBuilding")
 </script>
-<script text/javascript>
+<script type="text/javascript">
     function downloadFileEx(p) {
         var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + p;
         window.open(url);
