--- a/_pages/dept/sheriff/detention.html
+++ b/_pages/dept/sheriff/detention.html
@@ -65,7 +65,7 @@ permalink: /sheriff/detention/
 
 {% include modalPopup.html %}
 
-<script text/javascript>
+<script type="text/javascript">
 function downloadFileEx(filename){
 				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
 				window.open(url);
