--- a/_pages/dept/sheriff/emailNotification.html
+++ b/_pages/dept/sheriff/emailNotification.html
@@ -39,7 +39,7 @@ permalink: /sheriff/emailNotification
 
 </form>
 
-<script text/javascript>
+<script type="text/javascript">
 
 $(document).ready(function(){
   console.log('emailNotification Ready');
