--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -140,7 +140,7 @@ getNewsandNotices(args, "SO")
 </script>
 
 
-<script text/javascript>
+<script type="text/javascript">
 function downloadFileEx(p){
 				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + p;
 				window.open(url);
