--- a/_pages/employment/home.html
+++ b/_pages/employment/home.html
@@ -79,7 +79,7 @@ permalink: /employment/
   jobsList();
 </script>
 
-<script text/javascript>
+<script type="text/javascript">
 function downloadJobApp(filename){
   var url = 'https://gis.latah.id.us/api/downloadJobApp?fileName=' + filename
   $.ajax({
